# silver-waddle

./: .env.example  .gitignore  FRONTEND.md  README.md  debug_scraper.py  pyproject.toml  requirements.txt
.github/workflows/: daily_scrape.yml
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
src/schools_scraper/: __init__.py  abc_scraper.py  analysis.py  api.py  cli.py  config.py  database.py  email_service.py  gpt.py  io.py  newsletter.py  scraper.py  search.py
tests/: __init__.py  test_abc_scraper.py  test_database.py  test_scraper.py
